2006-01-16  Sebastien Pouliot  <sebastien@ximian.com>

	* GraphicsPathTest.cs: Added test cases for GetBounds and re-activated
	some parts of the tests that checked bounds (Add* tests).

2006-01-13  Sebastien Pouliot  <sebastien@ximian.com>

	* GraphicsPathTest.cs: New. Added multiple test cases to check null
	handling and how the points are generated for the Add* methods.
	* PathDataTest.cs: New. Added clone test case.

2006-01-12  Sebastien Pouliot  <sebastien@ximian.com>

	* GraphicsPathTest.cs: New. Basic test cases for empty path and 
	cloning.
	* PathDataTest.cs: New. Test cases for PathData.

2005-09-16  Sebastien Pouliot  <sebastien@ximian.com>

	* TestBlend.cs, TestColorBlend.cs, TestHatchBrush.cs, TestMatrix.cs:
	Deny UnmanagedCode permission to all tests. This shows (when executed 
	under MS runtime) that S.D API is safe and doesn't requires high 
	privileges to run - even if we know that, deep down, this calls into 
	GDI+.

2005-08-25 Jordi Mas i Hernandez <jordi@ximian.com>

	* TestMatrix.cs: New test cases
	
2005-08-24 Jordi Mas i Hernandez <jordi@ximian.com>

	* TestMatrix.cs: New Matrix unit case

2004-06-03  Ravindra  <rkumar@novell.com>

	* TestHatchBrush.cs: Added missing test cases for all the hatch
	styles.

2004-05-18  Ravindra  <rkumar@novell.com>

	* TestHatchBrush.cs: Added a test case for HatchBrush.cs.
	* TestBlend.cs: dos2unix format and namespace changed to
	MonoTests.System.Drawing.Drawing2D.
	* TestColorBlend.cs: dos2unix format and namespace changed to
	MonoTests.System.Drawing.Drawing2D.

2004-03-17  Ravindra  <rkumar@novell.com>

	* TestBlend.cs: Added.
	* TestColorBlend.cs: Added.

2004-03-17  Ravindra  <rkumar@novell.com>
	* System.Drawing.Drawing2D: Created a repository for
	System.Drawing.Drawing2D tests.
	* ChangeLog: Added.