@@ -1,3 +1,8 @@
+2006-01-27  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* GraphicsPathTest.cs: Removed "NotWorking" from existing Flatten 
+	tests and added more test cases (for each type of shape).
+
 2006-01-16  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* GraphicsPathTest.cs: Added test cases for GetBounds and re-activated
